--- a/index.html
+++ b/index.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <div>
-      Sedans Choose a sedan for its affordability and excellent fuel economy.
-      Ideal for cruising in the city or on your next road trip. SUVs Take an SUV
-      for its spacious interior, power, and versatility. Perfect for your next
-      family vacation and off-road adventures. Luxury Cruise in the best car
-      brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-      rental and arrive in style.
-    </div>
+    <ul class="painel">
+      <li class="sedans">
+        <img src="/img/icon-sedans.svg" alt="A sedan car" />
+        <h1>Sedans</h1>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal
+          for cruising in the city or on your next road trip.
+        </p>
+        <button>Learn More</button>
+      </li>
+      <li class="suvs">
+        <img src="/img/icon-suvs.svg" alt="A SUV car" />
+        <h1>SUVs</h1>
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect
+          for your next family vacation and off-road adventures.
+        </p>
+        <button>Learn More</button>
+      </li>
+      <li class="luxury">
+        <img src="/img/icon-luxury.svg" alt="A luxury car" />
+        <h1>Luxury</h1>
+        <p>
+          Cruise in the best car brands without the bloated prices. Enjoy the
+          enhanced comfort of a luxury rental and arrive in style.
+        </p>
+        <button>Learn More</button>
+      </li>
+    </ul>
   </body>
 </html>
